Feature/trip stops modal and price fix (#11)
* feat: add trip stops modal, show price with $ only when valid, and include departure time

* fix: revert comment

* fix: use basePrice and freeSeats in TripServiceImpl